<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_spikes" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <RelativeLayout
                android:id="@+id/totsPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/totsPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tots_pack_title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totsPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totsPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="ONE GUARANTEED TOTS PLAYER, 10 PLAYERS IN THE PACK"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/totsPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/totsPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="80000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/megaPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/megaPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mega_pack_title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/megaPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/megaPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="44 PLAYERS, ALL RARE"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/megaPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/megaPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="50000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/totwPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/totwPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totw_pack_title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totwPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/totwPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="GUARANTEED 1 TOTW PLAYER, 10 PLAYERS"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/totwPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/totwPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="40000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/primeGoldPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/primeGoldPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prime_players_pack_title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/primeGoldPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/primeGoldPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="MAKE YOUR CLUB BETTER WITH 82+ RATED GUARANTEED PLAYERS"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/primeGoldPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/primeGoldPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="15000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/premiumGoldPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/premiumGoldPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="true"
                    android:text="@string/premium_players_pack_title"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/premiumGoldPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/premiumGoldPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="MAKE YOUR CLUB BETTER WITH 81+ RATED GUARANTEED PLAYERS"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/premiumGoldPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/premiumGoldPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="10000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rareGoldPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_press_selector"
                android:padding="16dp">

                <TextView
                    android:id="@+id/rareGoldPackTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rare_players_pack_title"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/rareGoldPackDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rareGoldPackTitle"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:text="10 GUARANTEED RARE PLAYERS"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/rareGoldPackPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/rareGoldPackTitle"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="8dp"
                    android:background="#000000"
                    android:drawablePadding="8dp"
                    android:drawableRight="@drawable/ic_coins"
                    android:gravity="center"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="5000"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</layout>